--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                         <li><a href="#">Simon SC</a></li>
                         <li><a href="#">Simon Clerc</a></li>
                         <li><a href="#">Jerem</a></li>
+                        <li><a href="#">Lowik</a></li>
                     </ul>
                 </div>
             </footer>
