--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 
                 <div id="liste_amis">
                     <ul>
+                        <li><a href="#">Jérémy (le boss)</a></li>
                         <li><a href="#">Jean-Paul</a></li>
                         <li><a href="#">Kostas</a></li>
                         <li><a href="#">Billy</a></li>
                         <li><a href="#">Simon SC</a></li>
                         <li><a href="#">Simon Clerc</a></li>
-                        <li><a href="#">Jerem</a></li>
                         <li><a href="#">Lowik</a></li>
                     </ul>
                 </div>
