--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
                                 <img src="./images/moicv.jpg" alt="Photo de moi" title="Photo CV"/>
                             </a>
                         </div>
-                        <p> Je m'appelle Paul, je suis né le 17 Mai 1995. Je suis né à Lyon dans le 4ème arrondissement à La Croix-Rousse. J'ai vécu jusqu'à mes 8 ans sur Lyon, à la suite nous avons déménagé sur Bourg-en-Bresse avec ma famille où nous y sommes encore aujourd'hui. 
-                        Je travail actuellement dans le commerce, chez Boulanger, depuis un peu plus de 3 ans.</p>
+                            <p> Je m'appelle Paul, je suis né le 17 Mai 1995. Je suis né à Lyon dans le 4ème arrondissement à La Croix-Rousse.
+                            J'ai vécu jusqu'à mes 8 ans sur Lyon, à la suite nous avons déménagé sur Bourg-en-Bresse avec ma famille où nous y sommes encore aujourd'hui. 
+                            Je travail actuellement dans le commerce, chez Boulanger, depuis un peu plus de 3 ans.
+                            </p>
                         <a href="https://www.facebook.com/pboyer2"><img src="./images/facebook.png" alt="facebook" title="Facebook"/></a> 
                     </aside>
                 </div>
@@ -59,33 +61,34 @@
             <footer>
                 <div id="post">
                     <h1> MON DERNIER POST FACEBOOK</h1>
-                    <p>Voilà mon dernier post sur facebook: <a href="https://www.facebook.com/pboyer2/posts/10222833648373617" alt="dernier post" title="Dernier post"> dernier post. </a>Il s'agit d'un de mes groupes de musique préféré.</p>
+                    <p>Mon dernier post <a href="https://www.facebook.com/pboyer2/posts/10222833648373617" alt="dernier post" title="Dernier post"> dernier post. </a></p>
                 </div>
 
                 <div id="photos">
                     <h2> MES PHOTOS</h2>
                     <p> 
-                        <a href="./images/moto.jpg" target="_blank"> <img src="./images/moto_mini.jpg" alt="ma moto"/> </a>
-                        <a href="./images/tete_dor.JPG" target="_blank"> <img src="./images/tete_dor_mini.jpg" alt="parc de la tête d'or"/> </a>
-                        <a href="./images/piaf.JPG" target="_blank"> <img src="./images/piaf_mini.jpg" alt="oiseau"/> </a>
+                        <a href="./images/moto.jpg" target="_blank"><img src="./images/moto_mini.jpg" alt="ma moto"/></a>
+                        <a href="./images/tete_dor.JPG" target="_blank"><img src="./images/tete_dor_mini.jpg" alt="parc de la tête d'or"/></a>
+                        <a href="./images/piaf.JPG" target="_blank"><img src="./images/piaf_mini.jpg" alt="oiseau"/></a>
+                        <a href="./images/pere_fils.JPG" target="_blank"><img src="./images/pere_fils_mini.JPG" /></a>
                     </p>
                 </div>
+                    <div id="mes_amis">
+                        <h3> MES AMIS </h3>
+                        <div id="liste_amis">
+                            <ul>
+                                <li><a href="#">Jean-Paul</a></li>
+                                <li><a href="#">Kostas</a></li>
+                                <li><a href="#">Simon SC</a></li>
+                            </ul>
 
-                <div id="amis">
-                    <h3> MES AMIS </h3>
-                </div>
-
-                <div id="liste_amis">
-                    <ul>
-                        <li><a href="#">Jean-Paul</a></li>
-                        <li><a href="#">Kostas</a></li>
-                        <li><a href="#">Billy</a></li>
-                        <li><a href="#">Simon SC</a></li>
-                        <li><a href="#">Simon Clerc</a></li>
-                        <li><a href="#">Jerem</a></li>
-                        <li><a href="#">Lowik</a></li>
-                    </ul>
-                </div>
+                            <ul>
+                                <li><a href="#">Simon Clerc</a></li>
+                                <li><a href="#">Jerem</a></li>
+                                <li><a href="#">Lowik</a></li>
+                            </ul>
+                        </div>
+                    </div> 
             </footer>
         </div>
     </body>
