--- a/CV/CV.html
+++ b/CV/CV.html
@@ -7,40 +7,53 @@
     </head>
 
     <body>
-        <h1> BOYER PAUL </h1>
-            <p>
-                <a href="Moi.JPG"> <img src="moicv.jpg" alt="Photo de moi" title="Photo CV"/> </a>    
-            </p>        
-        <h2> Mon expérience </h2>
-            <p>
-                <ul>
-                    <li> <strong>2014</strong> : CDD de un mois chez Franprix.</li>
-                    <li> <strong>2015</strong> : CDD de un mois chez Franprix.</li>
-                    <li> <strong>2016 à 2017</strong> : Apprentissage BTS MUC de un an chez Carrefour Market.</li>
-                    <li> <strong>2017 à 2020</strong> : CDI dans l'entreprise <a href="https://www.Boulanger.com" title="travail" target="_blank"> Boulanger</a>.</li>
-                </ul>
-            </p>
-        <h3> Mes compétences </h3>
-            <p>
-                <ul>
-                    <li> Caisse</li>
-                    <li> Mise en rayon</li>
-                    <li> Récéption de marchandise</li>
-                    <li> Animation et promotion d'un produit</li>
-                    <li> Gestion d'un rayon</li>
-                    <li> Maîtrise du logiciel AS400</li>
-                    <li> Maîtrise de l'anglais</li>
-                </ul>
-            </p>
-        <h4> Ma formation </h4>
-            <p>
-                <ul>
-                    <li>Brevet des Collèges en 2010.</li>
-                    <li>J'ai obtenu le Baccalauréat professionnel Commerce en 2016.</li>
-                    <li>Je me forme en HTML et CSS sur <a href="https://openclassrooms.com" title="Site de formation" target="_blank" >openclassrooms.</a></li>
-                </ul>
-            </p>
+        <div id="liseret"></div>
 
-    
+            <div id="contenu">
+                <p>
+                    <a href="Moi.JPG"> <img src="moicv.jpg" alt="Photo de moi" title="Photo CV"/> </a>    
+                </p> 
+
+                <h1> BOYER PAUL </h1>
+
+            <section>      
+                <h2> Mon expérience </h2>
+                    <p>
+                        <ul>
+                            <li> <strong>2014</strong> : CDD de un mois chez Franprix.</li>
+                            <li> <strong>2015</strong> : CDD de un mois chez Franprix.</li>
+                            <li> <strong>2016 à 2017</strong> : Apprentissage BTS MUC de un an chez Carrefour Market.</li>
+                            <li> <strong>2017 à 2020</strong> : CDI dans l'entreprise <a href="https://www.Boulanger.com" title="travail" target="_blank"> Boulanger</a>.</li>
+                        </ul>
+                    </p>
+            </section> 
+
+            <section>
+                <h3> Mes compétences </h3>
+                    <p>
+                        <ul>
+                            <li> Caisse</li>
+                            <li> Mise en rayon</li>
+                            <li> Récéption de marchandise</li>
+                            <li> Animation et promotion d'un produit</li>
+                            <li> Gestion d'un rayon</li>
+                            <li> Maîtrise du logiciel AS400</li>
+                            <li> Maîtrise de l'anglais</li>
+                        </ul>
+                    </p>
+            </section>  
+        
+            <section>
+                <h4> Ma formation </h4>
+                    <p>
+                        <ul>
+                            <li>Brevet des Collèges en 2010.</li>
+                            <li>J'ai obtenu le Baccalauréat professionnel Commerce en 2016.</li>
+                            <li>Je me forme en HTML et CSS sur <a href="https://openclassrooms.com" title="Site de formation" target="_blank" >openclassrooms.</a></li>
+                        </ul>
+                    </p>
+
+            </section>
+        </div>        
     </body>
 </html>
