--- a/CV/CV.html
+++ b/CV/CV.html
@@ -23,7 +23,7 @@
                             <li> <strong>2014</strong> : CDD de un mois chez Franprix.</li>
                             <li> <strong>2015</strong> : CDD de un mois chez Franprix.</li>
                             <li> <strong>2016 à 2017</strong> : Apprentissage BTS MUC de un an chez Carrefour Market.</li>
-                            <li> <strong>2017 à 2020</strong> : CDI dans l'entreprise <a href="https://www.Boulanger.com" title="travail" target="_blank"> Boulanger</a>.</li>
+                            <li> <strong>2017 à 2021</strong> : CDI dans l'entreprise <a href="https://www.Boulanger.com" title="travail" target="_blank"> Boulanger</a>.</li>
                         </ul>
                     </p>
             </section> 
@@ -35,8 +35,8 @@
                             <li> Caisse</li>
                             <li> Mise en rayon</li>
                             <li> Récéption de marchandise</li>
-                            <li> Animation et promotion d'un produit</li>
-                            <li> Gestion d'un rayon</li>
+                            <li> Animation</li>
+                            <li> Gestion de l'univers multimédia</li>
                             <li> Maîtrise du logiciel AS400</li>
                             <li> Maîtrise de l'anglais</li>
                         </ul>
@@ -49,7 +49,7 @@
                         <ul>
                             <li>Brevet des Collèges en 2010.</li>
                             <li>J'ai obtenu le Baccalauréat professionnel Commerce en 2016.</li>
-                            <li>Je me forme en HTML et CSS sur <a href="https://openclassrooms.com" title="Site de formation" target="_blank" >openclassrooms.</a></li>
+                            <li>Je me forme en HTML, CSS, SASS, JS sur <a href="https://openclassrooms.com" title="Site de formation" target="_blank" >openclassrooms.</a></li>
                         </ul>
                     </p>
 
