--- a/index.html
+++ b/index.html
@@ -32,12 +32,17 @@
             <section>
                 <article>
                     <h1><img src="./images/ico_epingle.png" alt="épingle"/> Mes activités</h1>
-                    <p> Oui, vous avez bien lu, je suis un très grand fan de jeux vidéos. Je suis moi même gamer. Il m'arrivait de passer mes journées sur le pc sans même passer la tête par la fenêtre...</br>
-                        Mais j'ai une autre passion aujourd'hui, êtant un peu plus agé, il s'agit de la moto. Je suis moi même motard: <a href="./images/moto.jpg" alt="ma moto"> voici ma belle.</a></p>
+                    <p> 
+                        Je suis un très grand fan de jeux vidéos. Je suis moi même gamer. Il m'arrivait de passer mes journées sur le pc sans même passer la tête par la fenêtre...</br>
+                        Mais j'ai une autre passion aujourd'hui, êtant un peu plus agé, il s'agit de la moto. Je suis moi même motard: <a href="./images/moto.jpg" alt="ma moto"> voici ma belle.</a>
+                        Je me forme aussi, en dehors de mes horaires de travail sur l'informatique (HTML, CSS, SASS, JS).. 
+                    </p>
 
                     <h3><img src="./images/ico_epingle.png" alt="épingle"/> Pourquoi développing web ?</h3>
-                    <p> Je me forme actuellement en HTML et CSS, ce qui est la base pour devenir développeur web, afin de changer de milieu professionnel.</br>
-                        Pourquoi changer ? Et bien je suis dans le milieu du commerce depuis un peu plus de 3 ans et ce monde est très particulier pour moi. Le monde de l'informatique m'intéresse également depuis tout jeune. Simplement parce que je suis quelqu'un qui aime travailler dans le calme, être dans des projets où l'on peut voir le fruit de ses efforts s'accomplir, et puis le côté physique du travail m'épuise assez rapidement.
+                    <p> 
+                        Je me forme actuellement en HTML et CSS, qui est la base pour devenir développeur web, afin de changer de milieu professionnel.</br>
+                        Pourquoi changer ? Je suis dans le commerce depuis 3 ans maintenant, ce milieu ne me correspond pas pour différentes raisons.</br>
+                        Le monde de l'informatique m'intéresse également depuis tout jeune. Via les forums, les skyblogs où j'ai fais mes premiers pas. 
                     </p>
                 </article>
 
@@ -49,9 +54,10 @@
                                 <img src="./images/moicv.jpg" alt="Photo de moi" title="Photo CV"/>
                             </a>
                         </div>
-                            <p> Je m'appelle Paul, je suis né le 17 Mai 1995. Je suis né à Lyon dans le 4ème arrondissement à La Croix-Rousse.
-                            J'ai vécu jusqu'à mes 8 ans sur Lyon, à la suite nous avons déménagé sur Bourg-en-Bresse avec ma famille où nous y sommes encore aujourd'hui. 
-                            Je travail actuellement dans le commerce, chez Boulanger, depuis un peu plus de 3 ans.
+                            <p> 
+                                Je m'appelle Paul, je suis né le 17 Mai 1995. Je suis né à Lyon dans le 4ème arrondissement à La Croix-Rousse.
+                                J'ai vécu jusqu'à mes 8 ans sur Lyon, à la suite nous avons déménagé sur Bourg-en-Bresse avec ma famille où nous y sommes encore aujourd'hui. 
+                                Je travail actuellement dans le commerce, chez Boulanger, depuis 3 ans.
                             </p>
                         <a href="https://www.facebook.com/pboyer2"><img src="./images/facebook.png" alt="facebook" title="Facebook"/></a> 
                     </aside>
@@ -61,7 +67,7 @@
             <footer>
                 <div id="post">
                     <h1> MON DERNIER POST FACEBOOK</h1>
-                    <p>Mon dernier post <a href="https://www.facebook.com/pboyer2/posts/10222833648373617" alt="dernier post" title="Dernier post"> dernier post. </a></p>
+                    <p>Mon <a href="https://www.facebook.com/pboyer2/posts/10222833648373617" alt="dernier post" title="Dernier post"> dernier post. </a></p>
                 </div>
 
                 <div id="photos">
@@ -78,14 +84,14 @@
                         <div id="liste_amis">
                             <ul>
                                 <li><a href="#">Jean-Paul</a></li>
-                                <li><a href="#">Kostas</a></li>
-                                <li><a href="#">Simon SC</a></li>
+                                <li><a href="#">Thomas</a></li>
+                                <li><a href="#">Hugo</a></li>
                             </ul>
 
                             <ul>
-                                <li><a href="#">Simon Clerc</a></li>
-                                <li><a href="#">Jerem</a></li>
-                                <li><a href="#">Lowik</a></li>
+                                <li><a href="#">Simon</a></li>
+                                <li><a href="#">Jeremy</a></li>
+                                <li><a href="#">Loïc</a></li>
                             </ul>
                         </div>
                     </div> 
