--- a/CV/CV.html
+++ b/CV/CV.html
@@ -23,7 +23,7 @@
                             <li> <strong>2014</strong> : CDD de un mois chez Franprix.</li>
                             <li> <strong>2015</strong> : CDD de un mois chez Franprix.</li>
                             <li> <strong>2016 à 2017</strong> : Apprentissage BTS MUC de un an chez Carrefour Market.</li>
-                            <li> <strong>2017 à 2021</strong> : CDI dans l'entreprise <a href="https://www.Boulanger.com" title="travail" target="_blank"> Boulanger</a>.</li>
+                            <li> <strong>2017</strong> : CDI dans l'entreprise <a href="https://www.Boulanger.com" title="travail" target="_blank"> Boulanger</a>.</li>
                         </ul>
                     </p>
             </section> 
@@ -38,7 +38,7 @@
                             <li> Animation</li>
                             <li> Gestion de l'univers multimédia</li>
                             <li> Maîtrise du logiciel AS400</li>
-                            <li> Maîtrise de l'anglais</li>
+                            <li> Livraison</li>
                         </ul>
                     </p>
             </section>  
@@ -47,9 +47,11 @@
                 <h4> Ma formation </h4>
                     <p>
                         <ul>
-                            <li>Brevet des Collèges en 2010.</li>
-                            <li>J'ai obtenu le Baccalauréat professionnel Commerce en 2016.</li>
-                            <li>Je me forme en HTML, CSS, SASS, JS sur <a href="https://openclassrooms.com" title="Site de formation" target="_blank" >openclassrooms.</a></li>
+                            <li><strong>2021</strong> Je me forme en HTML, CSS, SASS, JS sur <a href="https://openclassrooms.com" title="Site de formation" target="_blank" >openclassrooms.</a></li>
+                            <li><strong>2015 - 2016</strong> Obtention du baccalauréat Commerce</li>
+                            <li><strong>2014 - 2016</strong> Lycée professionnel Saint Joseph Bac Commerce BOURG EN BRESSE</li>
+                            <li><strong>2011 - 2014</strong> Lycée Joseph Marie Carriat Bac STMG BOURUG EN BRESSE</li>
+                            <li><strong>2009 - 2010</strong> Obtention du Brevet des collèges</li>
                         </ul>
                     </p>
 
